# ossm

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.devcontainer/dev-patterns/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-windows.yml  build.yml  ci.yml  cleanup-webtools-preview.yml  create-release.yml  deploy-command.yml  deploy-webtools-preview.yml  deploy-webtools.yml  release.yml  upload-firmware.yml
apps/simulator/: index.html  package.json  pnpm-lock.yaml
apps/simulator/scripts/: vercel-build.sh
apps/simulator/src/: App.tsx  Scene.tsx  main.tsx
apps/simulator/src/lib/: device-connection.ts  telemetry.ts
apps/simulator/src/pages/: DevicePage.tsx
apps/web-tools/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.toml
apps/web-tools/src/: App.tsx  Chart.tsx  Layout.tsx  Scene.tsx  SimulatorProvider.tsx  TrajectoryPanel.tsx  global.css  main.tsx
apps/web-tools/src/api/: github-asset.ts  index.ts  pr-firmware.ts  tsconfig.json
apps/web-tools/src/hooks/: useEngineState.ts  useGithubPr.ts  useGithubReleases.ts  usePersistedState.ts  usePrFirmware.ts  useTrajectoryInputs.ts
apps/web-tools/src/pages/: DebuggingPage.tsx  FlasherPage.tsx  GraphPage.module.css  GraphPage.tsx  SimulatorPage.module.css  SimulatorPage.tsx  TestPage.tsx
bindings/trajectory-recorder/: Cargo.toml
bindings/trajectory-recorder/src/: lib.rs
bindings/web-simulator/: Cargo.toml  build.rs
bindings/web-simulator/src/: lib.rs
boards/ossm-alt/: Cargo.toml
boards/ossm-alt/src/: lib.rs
boards/rs485/src/: lib.rs
boards/sim-m5cores3/: Cargo.toml
boards/sim-m5cores3/src/: renderer.rs
boards/stepdir/: Cargo.toml
boards/stepdir/src/: lib.rs
common/ossm-esp/: Cargo.toml
common/ossm-esp-build/: Cargo.toml
common/ossm-esp-build/src/: lib.rs
common/ossm-esp/src/: lib.rs
crates/ble-remote/src/: lib.rs
crates/ossm-m5-remote/src/: lib.rs
crates/pattern-engine/src/: commands.rs  engine.rs  input.rs  lib.rs  pattern.rs  util.rs
docs/: so-you-want-to-add-a-pattern.md
drivers/m57aim/: Cargo.toml
drivers/m57aim/src/: lib.rs  rs485.rs
drivers/sim-motor/: Cargo.toml
drivers/sim-motor/src/: lib.rs
examples/ossm-alt-m57aim/: Cargo.toml
examples/ossm-alt-m57aim/src/: main.rs
features/ble-remote/: Cargo.toml
features/ble-remote/src/: lib.rs
features/ossm-m5-remote/: Cargo.toml
features/ossm-m5-remote/src/: lib.rs
features/pattern-engine/: Cargo.toml
features/pattern-engine/src/: any_pattern.rs  any_pattern_macro.rs  engine.rs  input.rs  lib.rs  pattern.rs  util.rs
features/pattern-engine/src/patterns/: deeper.rs  half_half.rs  mod.rs  simple.rs  stop_n_go.rs  teasing_pounding.rs  torque.rs
features/telemetry/: Cargo.toml
features/telemetry/src/: lib.rs  protocol.rs  transport.rs
firmware/esp32/: Cargo.toml
firmware/esp32/src/: board.rs  lib.rs  motor.rs  radio.rs
firmware/esp32s3/: Cargo.toml
firmware/esp32s3/src/: board.rs  lib.rs  motor.rs  radio.rs
firmware/ossm-alt/: Cargo.toml  build.rs
firmware/ossm-alt-m57aim/: Cargo.toml
firmware/ossm-alt-m57aim/src/: main.rs
firmware/ossm-alt/src/: main.rs
firmware/ossm-reference/: Cargo.toml  build.rs
firmware/ossm-reference/.cargo/: config.toml
firmware/ossm-reference/src/: current_sensor.rs  main.rs  step_output.rs
firmware/seeed-xiao/: Cargo.toml
firmware/seeed-xiao/src/: main.rs
firmware/sim-m5cores3/: Cargo.toml
firmware/sim-m5cores3/src/: main.rs
firmware/sim-recorder/: Cargo.toml
firmware/sim-recorder/src/: lib.rs
firmware/sim-wasm/: Cargo.toml  build.rs
firmware/sim-wasm/src/: lib.rs  recorder.rs
firmware/waveshare/: Cargo.toml  build.rs  espflash.toml
firmware/waveshare/src/: main.rs
ossm/: Cargo.toml
ossm-esp/: Cargo.toml
ossm-esp/build-support/: Cargo.toml
ossm-esp/build-support/src/: lib.rs
ossm-esp/src/: lib.rs  rs485.rs  uart.rs
ossm-esp/src/board/: rs485.rs  sim.rs  stepdir.rs
ossm-esp/src/motor/: mod.rs  rs485.rs  sim.rs  stepdir.rs
ossm/src/: board.rs  build_info.rs  command.rs  lib.rs  limits.rs  mechanical.rs  motion.rs  motor.rs  planner.rs  sim.rs  state.rs  telemetry.rs
ossm/src/motor/: current_sensor.rs  mod.rs  rs485.rs
ossm/src/planner/: linear.rs  mod.rs  ruckig.rs
ossm/src/transport/: mod.rs  modbus_rtu.rs  step_dir.rs
scripts/: doctor.ps1  doctor.sh  focus.ps1  focus.sh
sossm/src/: command.rs  lib.rs  motion.rs
src/boards/ossm-alt/: Cargo.toml
src/boards/ossm-alt/src/: lib.rs
src/lib/sossm/: Cargo.toml
src/lib/sossm/src/: board.rs  lib.rs  motor.rs
src/motors/m57aim/: Cargo.toml
src/motors/m57aim/src/: lib.rs
