[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.7", default-features = false }
embedded-io-async = "0.7"
cobs = { version = "0.4", default-features = false }
crc = { version = "3", default-features = false }
log = "0.4"

[dev-dependencies]
ossm = { path = "../../ossm" }
