[package]
name = "ossm-alt"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
ossm = { path = "../../ossm" }
ossm-esp = { path = "../../common/ossm-esp" }

esp-hal = { version = "~1.0", features = ["log-04", "esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
    "log-04",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04", "esp32s3"] }
esp-alloc = { version = "0.9.0" }
esp-backtrace = { version = "0.18.1", features = [
    "println",
    "esp32s3",
    "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
embassy-executor = { version = "0.9.1", features = ["log"] }

log = { version = "0.4.27", features = ["release_max_level_info"] }

[build-dependencies]
ossm-esp-build = { path = "../../common/ossm-esp-build" }
