[workspace]
resolver = "3"
members = ["."]

[package]
name = "sim-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ossm = { path = "../../ossm" }
sim-motor = { path = "../../drivers/sim-motor" }
sim-board = { path = "../../boards/sim-board" }
pattern-engine = { path = "../../features/pattern-engine" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
embassy-time = { version = "0.5.1", features = ["wasm", "generic-queue-32"] }
critical-section = { version = "1.2", features = ["std"] }
log = { version = "0.4", features = ["release_max_level_info"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
codegen-units = 1
opt-level = 's'
strip = true

